added my first blog!

--- a/src/content/blog/dance-curation-101.mdx
+++ b/src/content/blog/dance-curation-101.mdx
@@ -4,6 +4,8 @@ date: "2024-10-19"
 description: "My journey into the art of dance curation"
 author: "Milana Aernova"
 tags: ["improv", "performance", "movement", "art"]
-image: "/images/_51A2721-Enhanced-NR.jpg"
+image: "/images/DSC05621.jpg"
+hidden: true
 ---
+
 Step #1: Decide that you are going to create a dance show.
