--- a/src/content/projects/show-of-hearts.mdx
+++ b/src/content/projects/show-of-hearts.mdx
@@ -1,12 +1,13 @@
 ---
-title: "Aureate"
-description: "A media art piece inspired by the story of “Skeleton Woman” as told by Clarissa Pinkola Estés in the book, Women Who Run With the Wolves."
-image: "/images/Screenshot 2025-10-15 001651.png"
-slug: "aureate"
+title: "The Show of Hearts"
+subtitle: "Escondido, CA | August 9, 2025 6:30 - 9pm"
+description: "Experience the heartscape through community, dance, song, and poetry."
+image: "/images/DSC05621.jpg"
+slug: "show-of-hearts"
 publishDate: 2025-09-23
 year: "2025"
 featured: false
-tags: ["New Media", "Creative Technology", "Dance"]
+tags: ["Art Curation"]
 
 ---
 
@@ -16,4 +17,34 @@ import { YouTube } from '@astro-community/astro-embed-youtube';
 
 <br />
 
-**Dancer:** Milana Aernova
+**The Show of Hearts** is an interdisciplinary art show exploring the heartscape through art, community, dance, song, poetry, and more. Featuring invited artists, the event will showcase live improvisational music, spoken word poetry, dance, contact improv, and more. Beyond the stage, guests can enjoy a bar and a dance party to close out the night.
+
+The intention for the show is to cultivate a space and experience to embrace the heart, community, and connection through creativity and holding space for one another. By nurturing these, we not only deepen our human experience but also cultivate a world where love is expressed more fully and fearlessly.*
+
+This show was a dream of mine for over a year before finally coming to life tonight.
+
+Over the past year, I’ve been in conversation with the heart through relationships, community, self, and movement. Sometimes, having a heart has felt like a burden. But it’s also powerful, intuitive, and the source of rhythm, life, and love. It races at the first kiss of a lover, right before stepping on stage, or when you're about to speak your truth.
+
+It tells us what matters. What we truly care for.
+
+As this year has unfolded, I’ve felt more than ever that it’s vital to remember the heart and what it means to be human. To embrace love, joy, pain, emotion, and one another.
+
+This show is an offering. A reminder that the heart is not meant to be silenced or numbed. It’s meant to love, to beat, and to remind us what it means to be alive.
+
+We are here to cultivate a space and experience to embrace the heart, community, and connection through creativity and holding space for one another. By nurturing these, we not only deepen our human experience but also begin to recreate a world where love is expressed more fully and fearlessly.
+
+### A huge thank you to...
+
+Mat Rakers and Kevin Capacia of the Escondido Music and Art Company and the front-of-house and tech team for making this incredible and heartful event possible!
+
+All of the incredible and talented performers of tonight’s show. You all lead with so much love and care. Thank you for being a part of this creation.
+
+Our resilient and powerful community of artists, dancers, musicians, and so many more for making time to come out and witness the magic of this night.
+
+To my mother, my boyfriend, my friends and mentors, Alyssa Rose, Nicholas Naylor-Leyland, Marty Dorado, Richie Villa, Casey Hall-Landers, Tess Collins, Jane Blount, Jon Chen, Jo-Elyn, Audrey Herrington, Jenn Cormier, Leslie Armstrong, DISCO RIOT, SDDT, Victor Kulish, Liza Beltyukova, and countless others along with my community for giving me the encouragement, energy, and support I needed to make this happen!  - Milana Aernova
+
+May all beings be safe, happy, and free. Let’s create a better world together that leads with the heart.
+
+### Watch the full show:
+
+<YouTube id="VAe_kkTh3fk" />
