--- a/src/content/projects/skeleton-woman.mdx
+++ b/src/content/projects/skeleton-woman.mdx
@@ -6,7 +6,7 @@ slug: "skeleton-woman"
 publishDate: 2025-09-23
 year: "2025"
 featured: false
-tags: ["New Media", "Creative Technology", "Dance", "AI"]
+tags: ["New Media", "Creative Technology", "AI"]
 
 ---
 
