--- a/src/content/projects/unlearn.mdx
+++ b/src/content/projects/unlearn.mdx
@@ -6,7 +6,7 @@ slug: "unlearn"
 publishDate: 2025-09-23
 year: "2025"
 featured: false
-tags: ["New Media", "Creative Technology", "Dance"]
+tags: ["New Media", "Creative Technology"]
 
 ---
 
