--- a/src/content/blog/dancemaking-risktaking.mdx
+++ b/src/content/blog/dancemaking-risktaking.mdx
@@ -5,6 +5,5 @@ description: "Reflections on captivation in performance art with an effective us
 author: "Milana Aernova"
 tags: ["improvisational dance", "creative tech", "movement", "art"]
 image: "/images/IMG_6650.JPG"
+hidden: true
 ---
-
-When I began my S P A C E Rising Residency in September, I was struck by how I was given the opportunity to dance in a studio for hours. For the first five weeks, I spent my time dancing and exploring my connection to self, to dance, to the space. However, I felt my movement was empty and the show date seemed so far away.
