--- a/src/content/projects/particle-dance.mdx
+++ b/src/content/projects/particle-dance.mdx
@@ -5,8 +5,8 @@ image: "/images/Screenshot 2025-10-14 235024.png"
 slug: "particle-dance"
 publishDate: 2025-09-18
 year: "2023"
-featured: true
-tags: ["Multimedia", "New Media", "Creative Technology"]
+featured: false
+tags: ["New Media", "Creative Technology"]
 
 ---
 
