--- a/src/content/workshops/pipo.mdx
+++ b/src/content/workshops/pipo.mdx
@@ -3,19 +3,11 @@ title: "POP IN / POP OUT"
 subtitle: " Interactive Dance Visuals with TouchDesigner"
 description: "An immersive workshop introducing real-time visuals for performance. Learn to connect movement data with generative design using TouchDesigner."
 image: "/images/0EC7AE8B-546D-49FB-B48C-A287224E36BB.JPEG"
-slug: "pipo"
+slug: "pipo-dance-td"
 tags: ["technology", "touchdesigner", "visuals"]
 publishDate: 2025-08-17
 featured: false
 ---
-
-DISCO RIOT's POP IN/POP OUT series offers master classes to those in our community from trusted teaching artists to promote a culture of sharing, exploration, diversity, expanding perspectives, and building community. Class is a place of personal growth, community building, curiosity, skill-building, and play. We hope to expand our collective experiences by bringing in teaching artists that challenge what we're used to. We learn more from one another. We grow together. Join us!
-
-POP IN/POP OUT classes are on a tiered payment scale of $15, $20, $25 so that we can offer the highest quality experience for the community and for the master teacher. No one is turned away for lack of funds. Please reach out to education@discoriot.org for assistance.
-
-All proceeds from this workshop will support DISCO RIOT's Education & Outreach programming.
-
-This event is ADA accessible. DISCO RIOT is committed to accessibility and holds with great care the needs of our entire community, especially those who are disabled. We encourage you to contact Alyssa Rose, Operations Coordinator and Accessibility Specialist (email: operations@disoriot.org) regarding any specific accommodation needs.
 
 Tell a story through movement and media.
 
@@ -25,19 +17,20 @@ Whether you're a dancer, media artist, or curious creative, this class invites y
 
 No prior programming or dance experience required, just a willingness to experiment, move, and collaborate.
 
-What to bring:
+This workshop was created with the support of DISCO RIOT.
 
-A laptop with TouchDesigner installed (free version is okay)
+## What to bring
 
-DOWNLOAD TOUCHDESIGNER → https://derivative.ca/UserGuide/Install_TouchDesigner
+➡️ A laptop with TouchDesigner installed (free version is okay) 
 
-A dance video (preferably with a plain background) to customize in TouchDesigner
+➡️ [DOWNLOAD TOUCHDESIGNER](https://derivative.ca/UserGuide/Install_TouchDesigner)
 
-Comfortable clothes to move in
+➡️ A dance video (preferably with a plain background) to customize in TouchDesigner
 
+➡️ Comfortable clothes to move in
 
+## About DISCO RIOT's POP IN / POP OUT Series
 
-Milana Aernova is an interdisciplinary artist working at the intersection of dance and interactive media. With a background in both movement and computer science, she specializes in creating real-time performance environments that respond to the body through tools like TouchDesigner, code, and camera-based interaction. Her work explores the fusion of digital and physical expression, inviting audiences to experience dance in dynamic, responsive ways. In her workshops, Milana guides participants through building poetic, movement-driven visuals—bridging the gap between choreography and creative coding to reimagine what performance can be in a digital age.
+DISCO RIOT's POP IN/POP OUT series offers master classes to those in our community from trusted teaching artists to promote a culture of sharing, exploration, diversity, expanding perspectives, and building community. Class is a place of personal growth, community building, curiosity, skill-building, and play. We hope to expand our collective experiences by bringing in teaching artists that challenge what we're used to. We learn more from one another. We grow together. Join us!
 
-Location
-1100 Kettner Blvd, San Diego, CA, 92101
+All proceeds from this workshop will support DISCO RIOT's Education & Outreach programming.
