added low res images

--- a/src/content/projects/heartstrings.mdx
+++ b/src/content/projects/heartstrings.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Heartstrings"
 description: "Heartstrings is a somatic research practice created by Milana Aernova that weaves together movement and red string to explore the depths of human connection and our intricate entanglements with the world around us."
-image: "/images/DSC05408.jpg"
+image: "/low-res-images/DSC05408.jpg"
 slug: "heartstrings"
 publishDate: 2025-09-09
 year: "2025"
