--- a/src/content/projects/show-of-hearts.mdx
+++ b/src/content/projects/show-of-hearts.mdx
@@ -2,7 +2,7 @@
 title: "The Show of Hearts"
 subtitle: "Escondido, CA | August 9, 2025 6:30 - 9pm"
 description: "Experience the heartscape through community, dance, song, and poetry."
-image: "/images/DSC05621.jpg"
+image: "/low-res-images/DSC05621.jpg"
 slug: "show-of-hearts"
 publishDate: 2025-09-23
 year: "2025"
