--- a/src/content/projects/theres-a-heart-in-there.mdx
+++ b/src/content/projects/theres-a-heart-in-there.mdx
@@ -1,7 +1,7 @@
 ---
 title: "There's a Heart In There"
 description: "In a bustling and hustling world that seems to celebrate numbness over care, we are reminded that there’s a heart within that feels and pulses when we meet one another as humans."
-image: "/images/DSC05072.jpg"
+image: "/low-res-images/DSC05072.jpg"
 slug: "heart-in-there"
 publishDate: 2025-09-10
 year: "2025"
