--- a/src/content/projects/liminal.mdx
+++ b/src/content/projects/liminal.mdx
@@ -2,7 +2,7 @@
 title: "LIMINAL"
 subtitle: "Danse+Community"
 description: "A contemporary dance piece exploring liminal space as a transitory space and a metaphor for life."
-image: "/images/unnamed-1.jpg"
+image: "/low-res-images/unnamed-1.jpg"
 slug: "liminal"
 publishDate: 2025-09-20
 year: "2024"
