--- a/src/content/projects/she-speaks-1.mdx
+++ b/src/content/projects/she-speaks-1.mdx
@@ -2,7 +2,7 @@
 title: "She Speaks"
 subtitle: "Out of the Box: A Movement Open-Mic"
 description: "'She Speaks' is my journey towards self-acceptance, and it’s an invitation for others to embrace their own imperfections and live authentically showcased as a part of Voices of the With;OUT Dance Project."
-image: "/low-res-images/DSC_4199.JPG"
+image: "/low-res-images/DSC_4199.jpg"
 slug: "she-speaks-1"
 publishDate: 2025-10-01
 year: "2024"
